# movie-recommender-api

./: .gitignore  README.md  app.py  pyproject.toml  recommender.py
data/: movies.csv
movie_recommender/: __init__.py  data.py  recommender.py
static/: style.css
templates/: index.html
tests/: conftest.py  test_recommender.py
